--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,10 @@ description = "Extensible offline reinforcement learning framework built with JA
 readme = "README.md"
 authors = [{ name = "sql-hkr", email = "sql.hkr@gmail.com" }]
 requires-python = ">=3.11"
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.11",
+]
 dependencies = [
     "jax>=0.4.20",
     "jaxlib>=0.4.20",
